[package]
name = "chip-8"
version = "0.1.0"
authors = ["Den4200 <dennis@dennispham.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["bundled", "gfx"]
